[package]
name = "mfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emojis = "0.6"
nom = "7.1.3"
nom-regex = "0.2.0"
once_cell = "1.18"
unicode-segmentation = "1.10"

[dev-dependencies]
rustyline = "12.0"
